Attempt to fix PermGen space leaks with Ant/CodeNarc
+review REVIEW-5606